# ic-licensemanager

./: .gitignore  Cargo.toml  README.md  checher.py  checker.py  dfx.json  firma.py  index.html  package-lock.json  package.json  webpack.config.js
src/dip721_nft_container/: Main.mo  Types.mo
src/hello/: Cargo.toml  hello.did  lib.rs
src/internet_identity/: internet_identity.did
src/licenseManager/: Cargo.toml  hello.did  http.rs  lib.rs  lib_nft.rs  licenseManager.did
src/licenseManager_assets/assets/: main.css
src/licenseManager_assets/src/: index.html  index.js  login.html  register.html
