[package]
name = "licenseManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
candid = "0.7.14"
ed25519-dalek = "1.0.1"
serde = "1.0"
ic-certified-map = "0.3.0"
percent-encoding = "2.1.0"
serde_cbor = "0.11.2"
sha2 = "0.10.2"
include-base64 = "0.1.0"
base64 = "0.20.0-alpha.1"